--- a/todoBackend/src/main/resources/application.properties
+++ b/todoBackend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-datasource.todo.url = jdbc:mysql://192.168.134.69:3306/NDGE_TEMP?useSSL=false
-datasource.todo.username= root
-datasource.todo.password= SkilRock@1234
-datasource.todo.driverClassName= com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/ToDo
+spring.datasource.username= jatin
+spring.datasource.password= password
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
